--- a/order/bases/app-deployment.yaml
+++ b/order/bases/app-deployment.yaml
@@ -13,7 +13,7 @@ spec:
     metadata:
       labels:
         app: order
-        auto-devspace-popup: "true"
+        order-devspace-popup: "true"
     spec:
       containers:
       - image: image-registry.openshift-image-registry.svc:5000/microservices/order
@@ -41,3 +41,12 @@ spec:
           - configMapRef:
               name: order-configuration
         command: ["watchmedo", "auto-restart", "--directory=./", "--pattern=*.py", "--recursive", "--", "python", "-u", "manage.py", "consume_queues"]
+        livenessProbe:
+          exec:
+            command:
+            - python
+            - -u
+            - manage.py
+            - mq_healthz
+          initialDelaySeconds: 5
+          periodSeconds: 30
